--- a/Industry - Doc/index.html
+++ b/Industry - Doc/index.html
@@ -166,14 +166,14 @@
 				        <!--
 						JavaScripts
 						========================== -->
-						<script src="js/vendor/jquery-2.2.4.min.js"></script>
-						<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-						<script src="js/vendor/bootstrap.min.js"></script>
-						<script src="js/jquery.ajaxchimp.min.js"></script>
-						<script src="js/owl.carousel.min.js"></script>
-						<script src="js/jquery.nice-select.min.js"></script>
-						<script src="js/jquery.magnific-popup.min.js"></script>
-						<script src="js/main.js"></script>
+						<script defer src="js/vendor/jquery-2.2.4.min.js"></script>
+						<script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+						<script defer src="js/vendor/bootstrap.min.js"></script>
+						<script defer src="js/jquery.ajaxchimp.min.js"></script>
+						<script defer src="js/owl.carousel.min.js"></script>
+						<script defer src="js/jquery.nice-select.min.js"></script>
+						<script defer src="js/jquery.magnific-popup.min.js"></script>
+						<script defer src="js/main.js"></script>
 		            </pre>
 		        </section>
 		        
@@ -242,17 +242,17 @@
 		
 		<!-- Essential JavaScript Libraries
 		==============================================-->
-        <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
-        <script type="text/javascript" src="js/jquery.nav.js"></script>
-        <script type="text/javascript" src="syntax-highlighter/scripts/shCore.js"></script> 
-        <script type="text/javascript" src="syntax-highlighter/scripts/shBrushXml.js"></script> 
-        <script type="text/javascript" src="syntax-highlighter/scripts/shBrushCss.js"></script> 
-        <script type="text/javascript" src="syntax-highlighter/scripts/shBrushJScript.js"></script> 
-        <script type="text/javascript" src="syntax-highlighter/scripts/shBrushPhp.js"></script> 
+        <script type="text/javascript" defer src="js/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" defer src="js/jquery.nav.js"></script>
+        <script type="text/javascript" defer src="syntax-highlighter/scripts/shCore.js"></script>
+        <script type="text/javascript" defer src="syntax-highlighter/scripts/shBrushXml.js"></script>
+        <script type="text/javascript" defer src="syntax-highlighter/scripts/shBrushCss.js"></script>
+        <script type="text/javascript" defer src="syntax-highlighter/scripts/shBrushJScript.js"></script>
+        <script type="text/javascript" defer src="syntax-highlighter/scripts/shBrushPhp.js"></script>
         <script type="text/javascript">
             SyntaxHighlighter.all()
         </script>
-        <script type="text/javascript" src="js/custom.js"></script>
+        <script type="text/javascript" defer src="js/custom.js"></script>
 		
     </body>
 </html>
