--- a/services.html
+++ b/services.html
@@ -693,26 +693,26 @@
 </footer>
 <!-- End footer Area -->
 
-<script src="js/vendor/jquery-2.2.4.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+<script defer src="js/vendor/jquery-2.2.4.min.js"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-<script src="js/vendor/bootstrap.min.js"></script>
+<script defer src="js/vendor/bootstrap.min.js"></script>
 <script type="text/javascript"
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
-<script src="js/easing.min.js"></script>
-<script src="js/hoverIntent.js"></script>
-<script src="js/superfish.min.js"></script>
-<script src="js/jquery.ajaxchimp.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/hexagons.min.js"></script>
-<script src="js/jquery.nice-select.min.js"></script>
-<script src="js/jquery.counterup.min.js"></script>
-<script src="js/waypoints.min.js"></script>
-<script src="js/mail-script.js"></script>
-<script src="js/lightbox.min.js"></script>
-<script src="js/main.js"></script>
+        defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+<script defer src="js/easing.min.js"></script>
+<script defer src="js/hoverIntent.js"></script>
+<script defer src="js/superfish.min.js"></script>
+<script defer src="js/jquery.ajaxchimp.min.js"></script>
+<script defer src="js/jquery.magnific-popup.min.js"></script>
+<script defer src="js/owl.carousel.min.js"></script>
+<script defer src="js/hexagons.min.js"></script>
+<script defer src="js/jquery.nice-select.min.js"></script>
+<script defer src="js/jquery.counterup.min.js"></script>
+<script defer src="js/waypoints.min.js"></script>
+<script defer src="js/mail-script.js"></script>
+<script defer src="js/lightbox.min.js"></script>
+<script defer src="js/main.js"></script>
 </body>
 </html>
 
