--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
 </header>
 
 <!-- Start contact-page Area -->
-<section class="contact-page-area section-gap">
+<section class="error-page-area section-gap">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 d-flex flex-column address-wrap align-center">
@@ -75,7 +75,7 @@
                     </p>
                     <p class="error-actions">
                         <a href="index.html" class="btn btn-primary btn-lg">
-                            Take Me Home </a><
+                            Take Me Home </a>
                     </p>
                 </div>
             </div>
