--- a/careers.html
+++ b/careers.html
@@ -89,62 +89,13 @@
 <section class="contact-page-area section-gap">
     <div class="container">
         <div class="row">
-           <!-- <div class="col-lg-4 d-flex flex-column address-wrap">
-                <div class="single-contact-address d-flex flex-row">
-                    <div class="icon">
-                        <span class="lnr lnr-home"></span>
-                    </div>
-                    <div class="contact-details">
-                        <h5>Pearl River, LA 70453</h5>
-                        <p>63254 Old Military Road</p>
-                    </div>
+            <div class="col-lg-12 d-flex flex-column address-wrap align-center">
+                <div class="error-template error-page">
+                    <p>
+                        Job Postings Coming Soon
+                    </p>
                 </div>
-                <div class="single-contact-address d-flex flex-row">
-                    <div class="icon">
-                        <span class="lnr lnr-phone-handset"></span>
-                    </div>
-                    <div class="contact-details">
-                        <h5>Office: 985-863-5510</h5>
-                    </div>
-                </div>
-                <div class="single-contact-address d-flex flex-row">
-                    <div class="icon">
-                        <span class="lnr lnr-envelope"></span>
-                    </div>
-                    <div class="contact-details">
-                        <h5>infot@testcomm.com</h5>
-                        <p>Send us your inquiry anytime!</p>
-                    </div>
-                </div>
-            </div>-->
-           <!-- <div class="col-lg-12">
-                <form class="form-area " id="myForm" action="mail.php" method="post" class="contact-form text-right">
-                    <div class="row">
-                        <div class="col-lg-6 form-group">
-                            <input name="firstname" type="hidden">
-                            <input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''"
-                                   onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control"
-                                   required="" type="text">
-
-                            <input name="email" placeholder="Enter email address"
-                                   pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$"
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'"
-                                   class="common-input mb-20 form-control" required="" type="email">
-
-                            <input name="subject" placeholder="Enter your subject" onfocus="this.placeholder = ''"
-                                   onblur="this.placeholder = 'Enter your subject'"
-                                   class="common-input mb-20 form-control" required="" type="text">
-                            <div class="mt-20 alert-msg" style="text-align: left;"></div>
-                        </div>
-                        <div class="col-lg-6 form-group">
-                            <textarea class="common-textarea form-control" name="message" placeholder="Message"
-                                      onfocus="this.placeholder = ''" onblur="this.placeholder = 'Message'"
-                                      required=""></textarea>
-                            <button class="genric-btn primary mt-30" style="float: right;">Send Message</button>
-                        </div>
-                    </div>
-                </form>
-            </div>-->
+            </div>
         </div>
     </div>
 </section>
